Edit swagger doc
